@@ -2,7 +2,7 @@ use strict;
 
 use ExtUtils::MakeMaker;
 
-require 5.005_04;
+require 5.006;
 
 WriteMakefile(
   NAME         => 'Try::Tiny',
@@ -13,6 +13,7 @@ WriteMakefile(
     'Test::More' => 0,
   },
   META_MERGE => {
+    dynamic_config => 0,
     resources => {
       homepage => 'https://github.com/doy/try-tiny.git',
       repository => 'git://github.com/doy/try-tiny.git',
