@@ -56,11 +56,19 @@ sub run {
     return 'catch';
   }
   finally {
-    is (wantarray, undef, "Proper VOID context in finally{} 1");
+    SKIP: {
+      skip "DESTROY() not called in void context on perl $]", 1
+        if $] < '5.008';
+      is (wantarray, undef, "Proper VOID context in finally{} 1");
+    }
     return 'finally';
   }
   finally {
-    is (wantarray, undef, "Proper VOID context in finally{} 2");
+    SKIP: {
+      skip "DESTROY() not called in void context on perl $]", 1
+        if $] < '5.008';
+      is (wantarray, undef, "Proper VOID context in finally{} 2");
+    }
     return 'finally';
   };
 }
